# finelistener

./: .eslintrc.js  .gitignore  AGENTS.md  README.md  eslint.config.js  eslint.config.mjs  forge.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.mts  vite.config.ts  vitest.config.mts
build-tools/: wine64
electron/: main.ts  preload.ts
electron/src/controllers/: debugController.ts  fileController.ts  ipc.ts  recordingController.ts  transcriptionController.ts  uiPreferencesController.ts  whisperModelController.ts
electron/src/services/: AudioPreprocessor.ts  Loudnorm.ts  RecordingService.mmd  RecordingService.test.ts  RecordingService.ts  TranscriptionService.ts  WhisperModelService.ts  audioProcessing.ts  progress.ts  transcription.ts  whisperCli.ts
electron/src/services/capture/: AudioteeAdapter.ts  CaptureAdapter.ts  MiniAudioAdapter.ts  ScreenCaptureKitAdapter.ts  WasapiAdapter.ts
electron/src/services/recording/: AudioteeAdapter.ts  ScreenCaptureKitAdapter.ts
electron/src/services/whisperServer/: TranscriptStreamParser.ts  Whisper.ts  WhisperModelManager.ts  WhisperServer.ts  WhisperServerApiClient.ts  types.ts  utils.ts  (+1 more)
electron/src/types/: transcription.ts  uiPreferences.ts  whisper.ts
electron/src/utils/: whisper.ts
miniaudio-loopback/: CMakeLists.txt  README.md
miniaudio-loopback/src/: main.cpp
renderer/: index.html  tsconfig.json
renderer/src/: App.tsx  AppContext.ts  Home.tsx  atoms.ts  main.tsx  theme.ts
renderer/src/types/: window-api.d.ts
scripts/: dev-electron.mjs  prepare-dev-macos-app.mjs
(+41 files in other folders)
